kubernetes/screaming-morphs/staging/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: screaming-morphs-staging
  namespace: screaming-morphs-staging
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`staging.screamingmorphs.com`)
      kind: Rule
      middlewares:
        - name: screaming-morphs-staging-allowlist
      services:
        - name: screaming-morphs-staging-app
          port: 3000
  tls:
    secretName: screaming-morphs-staging-tls
